--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ extra_css:
 
 nav:
     - Intro:
-        - Instead of a preface           : index.md 
+        - Not a Preface                  : index.md 
         - Overview                       : src/overview.md
     - RTOS Components:
         - Kernel                         : src/kernel.md
