--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
     - Appendix:
         - Debug                          : src/debug.md
         - Process Performance Profiling  : src/profiler.md
+        - 'Example: Job Queue'           : src/example-job-queue.md
         - Glossary                       : src/glossary.md
 
 extra_javascript:
